Gutenberg: fix component placeholder styling
The component placeholder background was overflowing past the right
border. This override fixes that at aligns it with core look.

--- a/client/gutenberg/editor/style.scss
+++ b/client/gutenberg/editor/style.scss
@@ -45,6 +45,10 @@ $gutenberg-theme-toggle: #11a0d2;
 		top: 0;
 	}
 
+	.components-placeholder {
+		box-sizing: border-box;
+	}
+
 	@media (min-width: 600px) {
 		.edit-post-sidebar {
 			top: 57px;
